Fri Mar 21 20:54:31 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/dstate.c: send data to the server with a timeout (so that
   it doesn't have to accept everything in one write action)

Fri Mar 21 20:48:27 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: handle all communications with the server
   through upscli_sendline/readline to prevent blocking on I/O
   calls when the server is not responding (while still allowing
   it a couple of seconds to reply).

Thu Mar 20 20:11:55 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: missing return statement caused the driver to
   ignore communication failures (will now report properly after three
   consecutive failures)

Thu Mar 20 19:59:23 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd: add clients last in the list of filedescriptors to
   poll, so that the server won't become unresponsive if the maximum
   number of connections is exceeded

Wed Mar 19 20:15:20 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: Don't assume the server will answer immediately,
   but instead use select() to see if data is available. This should fix
   the problem that 'upsmon' loses connections on highly loaded servers.
   Likewise, also check if the server is ready to receive data before
   trying to send it.

Tue Mar 18 19:51:53 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd: use poll() instead of select() to allow larger numbers
   of clients to connect to the server than FD_SETSIZE allows (maximum
   number can be specified with MAXCONN in upsd.conf, defaults to
   FD_SETSIZE)

Mon Mar 17 13:43:21 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - data/cmdvartab: add obsolete 'beeper.on' and 'beeper.off' commands
   with an informative message to use the new replacements

Thu Mar 13 15:25:32 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - clients/upsstats.c, conf/upsstats.html.sample: fixed the Internet