@@ -1,3 +1,8 @@
+Fri Mar 21 21:04:53 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - server/upsd: revert changes from r1379 which seem to have a bad
+   side effect on highly loaded servers
+
 Fri Mar 21 20:54:31 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/dstate.c: send data to the server with a timeout (so that
